--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
-<img src="assets/pngtree-smiley-sticker-face-png-image_6144836.png" alt="" class="delay-element">
+<!-- <img src="assets/pngtree-smiley-sticker-face-png-image_6144836.png" alt="" class="delay-element"> -->
 
 <body id="mainContent">
     <header id="particles-js">
@@ -16,7 +16,7 @@
             <!-- <img src="assets/Code-full.svg" alt=""> -->
             <h1>Communication & multimedia design</h1>
             <h2>Daan en Luuk van Dooremalen</h2>
-            <!-- <button id="colorSwitch"> <p>suprise button</p></button> -->
+            <!-- <button iLd="colorSwitch"> <p>suprise button</p></button> -->
         </div>
         <div class="container2">
             <a href="#scrolltoarea"><img src="assets/arrow-down.svg" alt=""></a>
