Jaar blokken aangepast

--- a/luuk.html
+++ b/luuk.html
@@ -45,22 +45,22 @@
                     <img src="assets/palette-solid.svg" alt="">
                 </div>
             </div>
-
         </div>
 
         <div class="luuk-cont-jaren">
             <div class="jaar" id="jaar1">
                     <h3>Jaar 1</h3>
                 <div class="show">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. </p>
+                    <p>Jaar 1 is het jaar waar je kennis maakt met de vakken. Aan het einde van elk blok pas je de geleerde skills altijd toe op opdrachten voor echte werkgevers </p>
                     <div class="more2">
                         <p>Ontdek meer →</p>
                     </div>
                 </div>
                 <div class="hidden">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. Cras accumsan erat magna, eleifend tristique diam lacinia in. Vestibulum interdum dui vitae mi pharetra gravida. Mauris non erat quis ipsum facilisis iaculis nec a ipsum. Vivamus nec tellus eu felis commodo cursus sit amet sit amet arcu. Sed lobortis laoreet sem at iaculis. Phasellus hendrerit est libero, in suscipit dui mollis et. Fusce sit amet accumsan erat, a luctus orci.
-                        Aenean in ipsum rutrum, dictum odio ac, dapibus sem. Nulla sagittis facilisis mauris, sit amet maximus dui cursus a. Fusce quis metus velit. Praesent rutrum dui sed tincidunt congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur rhoncus egestas metus, id rhoncus nisl interdum non. Curabitur finibus risus eget lorem tempus, id condimentum justo molestie. Cras diam purus, consequat ac felis at, porttitor feugiat nulla. Mauris ac dignissim urna. Cras vel mi et est mollis ultrices a efficitur erat. Cras aliquam velit est, non ultricies nunc dictum efficitur. Nunc interdum velit eget turpis egestas, in porta tortor gravida. Mauris gravida dui id condimentum feugiat. Donec nec magna in massa efficitur volutpat at nec dolor.
-                        Vivamus maximus, tellus eget tempor fermentum, enim ipsum consectetur sapien, vel condimentum lorem eros sit amet eros. Aliquam non blandit velit. Proin accumsan congue magna, non dapibus nulla blandit at. Aenean at nisl eget metus porttitor luctus. Proin id elit ipsum. Nam tellus sem, gravida a risus ut, hendrerit tempus orci. Maecenas varius, ex in vestibulum volutpat, velit dui bibendum mi, at faucibus purus nunc sagittis leo. Integer vel mi scelerisque, egestas lectus in, egestas orci. Quisque consectetur eu quam vel fringilla. Nullam in tellus non odio malesuada ornare ac eu metus. Integer nec felis sapien.</p>
+                    <h4>blok 1: Webmagazine</h4>
+                    <h4>blok 2: Geschiedenis festival</h4>
+                    <h4>blok 3: Gen art</h4>
+                    <h4>blok 4: Code for Kids</h4>
                 </div>
             </div>
 
@@ -73,9 +73,10 @@
                 </div>
             </div>
             <div class="hidden">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. Cras accumsan erat magna, eleifend tristique diam lacinia in. Vestibulum interdum dui vitae mi pharetra gravida. Mauris non erat quis ipsum facilisis iaculis nec a ipsum. Vivamus nec tellus eu felis commodo cursus sit amet sit amet arcu. Sed lobortis laoreet sem at iaculis. Phasellus hendrerit est libero, in suscipit dui mollis et. Fusce sit amet accumsan erat, a luctus orci.
-                    Aenean in ipsum rutrum, dictum odio ac, dapibus sem. Nulla sagittis facilisis mauris, sit amet maximus dui cursus a. Fusce quis metus velit. Praesent rutrum dui sed tincidunt congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur rhoncus egestas metus, id rhoncus nisl interdum non. Curabitur finibus risus eget lorem tempus, id condimentum justo molestie. Cras diam purus, consequat ac felis at, porttitor feugiat nulla. Mauris ac dignissim urna. Cras vel mi et est mollis ultrices a efficitur erat. Cras aliquam velit est, non ultricies nunc dictum efficitur. Nunc interdum velit eget turpis egestas, in porta tortor gravida. Mauris gravida dui id condimentum feugiat. Donec nec magna in massa efficitur volutpat at nec dolor.
-                    Vivamus maximus, tellus eget tempor fermentum, enim ipsum consectetur sapien, vel condimentum lorem eros sit amet eros. Aliquam non blandit velit. Proin accumsan congue magna, non dapibus nulla blandit at. Aenean at nisl eget metus porttitor luctus. Proin id elit ipsum. Nam tellus sem, gravida a risus ut, hendrerit tempus orci. Maecenas varius, ex in vestibulum volutpat, velit dui bibendum mi, at faucibus purus nunc sagittis leo. Integer vel mi scelerisque, egestas lectus in, egestas orci. Quisque consectetur eu quam vel fringilla. Nullam in tellus non odio malesuada ornare ac eu metus. Integer nec felis sapien.</p>
+                <h4>blok 1: Museum installatie</h4>
+                <h4>blok 2: Multi Media Story</h4>
+                <h4>blok 3: Keuze module</h4>
+                <h4>blok 4: Keuze module</h4>
             </div>
         </div>
 
@@ -88,9 +89,10 @@
                 </div>
             </div>
             <div class="hidden">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. Cras accumsan erat magna, eleifend tristique diam lacinia in. Vestibulum interdum dui vitae mi pharetra gravida. Mauris non erat quis ipsum facilisis iaculis nec a ipsum. Vivamus nec tellus eu felis commodo cursus sit amet sit amet arcu. Sed lobortis laoreet sem at iaculis. Phasellus hendrerit est libero, in suscipit dui mollis et. Fusce sit amet accumsan erat, a luctus orci.
-                    Aenean in ipsum rutrum, dictum odio ac, dapibus sem. Nulla sagittis facilisis mauris, sit amet maximus dui cursus a. Fusce quis metus velit. Praesent rutrum dui sed tincidunt congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur rhoncus egestas metus, id rhoncus nisl interdum non. Curabitur finibus risus eget lorem tempus, id condimentum justo molestie. Cras diam purus, consequat ac felis at, porttitor feugiat nulla. Mauris ac dignissim urna. Cras vel mi et est mollis ultrices a efficitur erat. Cras aliquam velit est, non ultricies nunc dictum efficitur. Nunc interdum velit eget turpis egestas, in porta tortor gravida. Mauris gravida dui id condimentum feugiat. Donec nec magna in massa efficitur volutpat at nec dolor.
-                    Vivamus maximus, tellus eget tempor fermentum, enim ipsum consectetur sapien, vel condimentum lorem eros sit amet eros. Aliquam non blandit velit. Proin accumsan congue magna, non dapibus nulla blandit at. Aenean at nisl eget metus porttitor luctus. Proin id elit ipsum. Nam tellus sem, gravida a risus ut, hendrerit tempus orci. Maecenas varius, ex in vestibulum volutpat, velit dui bibendum mi, at faucibus purus nunc sagittis leo. Integer vel mi scelerisque, egestas lectus in, egestas orci. Quisque consectetur eu quam vel fringilla. Nullam in tellus non odio malesuada ornare ac eu metus. Integer nec felis sapien.</p>
+                <h4>blok 1: Stage</h4>
+                <h4>blok 2: Stage</h4>
+                <h4>blok 3: Minor</h4>
+                <h4>blok 4: Minor</h4>
             </div>
         </div>
 
@@ -103,9 +105,10 @@
                 </div>
             </div>
             <div class="hidden">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. Cras accumsan erat magna, eleifend tristique diam lacinia in. Vestibulum interdum dui vitae mi pharetra gravida. Mauris non erat quis ipsum facilisis iaculis nec a ipsum. Vivamus nec tellus eu felis commodo cursus sit amet sit amet arcu. Sed lobortis laoreet sem at iaculis. Phasellus hendrerit est libero, in suscipit dui mollis et. Fusce sit amet accumsan erat, a luctus orci.
-                    Aenean in ipsum rutrum, dictum odio ac, dapibus sem. Nulla sagittis facilisis mauris, sit amet maximus dui cursus a. Fusce quis metus velit. Praesent rutrum dui sed tincidunt congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur rhoncus egestas metus, id rhoncus nisl interdum non. Curabitur finibus risus eget lorem tempus, id condimentum justo molestie. Cras diam purus, consequat ac felis at, porttitor feugiat nulla. Mauris ac dignissim urna. Cras vel mi et est mollis ultrices a efficitur erat. Cras aliquam velit est, non ultricies nunc dictum efficitur. Nunc interdum velit eget turpis egestas, in porta tortor gravida. Mauris gravida dui id condimentum feugiat. Donec nec magna in massa efficitur volutpat at nec dolor.
-                    Vivamus maximus, tellus eget tempor fermentum, enim ipsum consectetur sapien, vel condimentum lorem eros sit amet eros. Aliquam non blandit velit. Proin accumsan congue magna, non dapibus nulla blandit at. Aenean at nisl eget metus porttitor luctus. Proin id elit ipsum. Nam tellus sem, gravida a risus ut, hendrerit tempus orci. Maecenas varius, ex in vestibulum volutpat, velit dui bibendum mi, at faucibus purus nunc sagittis leo. Integer vel mi scelerisque, egestas lectus in, egestas orci. Quisque consectetur eu quam vel fringilla. Nullam in tellus non odio malesuada ornare ac eu metus. Integer nec felis sapien.</p>
+                <h4>blok 1: Minor</h4>
+                <h4>blok 2: Minor</h4>
+                <h4>blok 3: Stage</h4>
+                <h4>blok 4: Stage</h4>
             </div>
         </div>
 
