--- a/luuk.html
+++ b/luuk.html
@@ -57,17 +57,36 @@
                     </div>
                 </div>
                 <div class="hidden">
-                    <h4>blok 1: Webmagazine</h4>
-                    <h4>blok 2: Geschiedenis festival</h4>
-                    <h4>blok 3: Gen art</h4>
-                    <h4>blok 4: Code for Kids</h4>
+                    <img src="assets/vakken-jaar.svg" alt="">
+
+                    <div class="blokken">
+                        <div class="blok-cont">
+                            <h4>blok 1: Webmagazine</h4>
+                            <img src="assets/newspaper-solid.svg" alt="">
+                        </div>
+                        <div class="blok-cont">
+                            <h4>blok 2: Lees campagne</h4>
+                            <img src="assets/book-solid.svg" alt="">
+                        </div>
+                        <div class="blok-cont">
+                            <h4>blok 3: Gen art</h4>
+                            <img src="assets/brush-solid.svg" alt="">
+                        </div>
+                        <div class="blok-cont">
+                            
+                        </div>
+                        <div class="blok-cont">
+                            <h4>blok 4: Code for Kids</h4>
+                            <img src="assets/child-solid.svg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="jaar" id="jaar1">
+            <div class="jaar" id="jaar2">
                 <h3>Jaar 2</h3>
             <div class="show">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. </p>
+                <p>Jaar 2 werk je in groepsgenoten voor echte opdrachtgevers. Blok 2.3 en 2.4 is een grote opdracht van 20 weken.</p>
                 <div class="more2">
                     <p>Ontdek meer →</p>
                 </div>
@@ -80,10 +99,10 @@
             </div>
         </div>
 
-        <div class="jaar" id="jaar1">
+        <div class="jaar" id="jaar3">
                 <h3>Jaar 3</h3>
             <div class="show">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. </p>
+                <p>Jaar 3 begin je met een stage van 20 weken of te wel 2 blokken. Hierna volg je 2 minors. Elk blok 1 minor.</p>
                 <div class="more2">
                     <p>Ontdek meer →</p>
                 </div>
@@ -96,10 +115,10 @@
             </div>
         </div>
 
-        <div class="jaar" id="jaar1">
+        <div class="jaar" id="jaar4">
             <h3>Jaar 4</h3>
             <div class="show">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum laoreet urna eu gravida. </p>
+                <p>Jaar 4 begint met 2 minoren. Elk blok 1 minor. Hierna heb je je afstudeer stage. Deze duurt 20 weken. </p>
                 <div class="more2">
                     <p>Ontdek meer →</p>
                 </div>
