--- a/luuk.html
+++ b/luuk.html
@@ -92,8 +92,8 @@
                 </div>
             </div>
             <div class="hidden">
-                <h4>blok 1: Museum installatie</h4>
-                <h4>blok 2: Multi Media Story</h4>
+                <h4>blok 1: Interaction design</h4>
+                <h4>blok 2: Multimedia Design</h4>
                 <h4>blok 3: Keuze module</h4>
                 <h4>blok 4: Keuze module</h4>
             </div>
@@ -136,6 +136,9 @@
 
     <img src="assets/omgekeerd-clouds black.svg" alt="">
     <script src="script.js"></script>
+
+</body>
+</html>
 
 </body>
 </html>
